ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: statamic-app
            port:
              number: 80
      - path: /ai-service
        pathType: Prefix
        backend:
          service:
            name: ai-frontend
            port:
              number: 91
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: statamic-app
            port:
              number: 80
      - path: /ai-service
        pathType: Prefix
        backend:
          service:
            name: ai-frontend
            port:
              number: 91
